@@ -1,3 +1,7 @@
+2019-08-15  Richard Biener  <rguenther@suse.de>
+
+	* gcc.dg/pr80170.c: Adjust to use __SIZETYPE__.
+
 2019-08-15  Richard Sandiford  <richard.sandiford@arm.com>
 
 	* gcc.target/aarch64/sve/loop_add_4.c: Expect 10 INCWs and
